# babat-redis-handle

./: CHANGELOG.md  babat-redis-handle.cabal  default.nix  shell.nix
.github/workflows/: ci.yml
src/Babat/: Redis.hs
src/Babat/Redis/: Actual.hs  Aeson.hs  Catalog.hs  FromEnv.hs  Mem.hs  Types.hs
test/: Spec.hs
test/Redis/: ActualSpec.hs  CheckHandle.hs  MemSpec.hs  UsageSpec.hs
