cabal-version:       3.0
name:                babat-redis-handle
version:             0.6.0.0
synopsis:            Provides a Handle for storing hash tables in Redis
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tim Emiola
maintainer:          tim@emio.la
category:            Network
extra-source-files:  CHANGELOG.md
homepage:           https://github.com/adetokunbo/babat-redis-handle#readme
bug-reports:
  https://github.com/adetokunbo/babat-redis-handle/issues

source-repository head
  type:     git
  location: https://github.com/adetokunbo/babat-redis-handle.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Babat.Redis.Aeson
                       Babat.Redis.Actual
                       Babat.Redis.FromEnv
                       Babat.Redis.Mem
                       Babat.Redis.Types
                       Babat.Redis.Catalog
                       Babat.Redis

  build-depends:       base                 >= 4.11 && <5.0
                     , aeson                >= 2.0.0 && < 2.2
                     , bytestring           >= 0.10.12 && < 0.11
                     , binary               >= 0.8.8 && < 0.9
                     , containers           >= 0.6.5 && < 0.7
                     , hedis                >= 0.15.1 && < 0.16
                     , http-api-data        >= 0.5 && < 0.6
                     , read-env-var         >= 1.0.0 && < 1.1
                     , string-conversions   >= 0.4.0 && < 0.5
                     , text                 >= 1.2.4 && < 1.3
                     , unliftio             >= 0.2.22 && < 0.3
                     , unliftio-core        >= 0.2.0 && < 0.3

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs



test-suite test-specs
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Redis.CheckHandle
                    Redis.MemSpec
                    Redis.ActualSpec
                    Redis.UsageSpec
  hs-source-dirs:   test
  build-depends:    base
                  , QuickCheck
                  , babat-redis-handle
                  , bytestring
                  , containers
                  , hspec                   >= 2.1
                  , hspec-tmp-proc
                  , tmp-proc-redis
                  , quickcheck-instances
                  , text
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs